@@ -1,0 +1,4 @@
+2004-04-02  Todd Berman  <tberman@sevenl.net>
+
+	* Makefile.am: add GettextCatalog.cs.
+	* Services/GettextCatalog.cs: move here so other libs can use easier.
