@@ -1,8 +1,15 @@
+2004-04-03  Todd Berman  <tberman@sevenl.net>
+
+	* Tree/TreeNodeCollection.cs:
+	* FileBrowser/FileBrowser.cs:
+	* FolderDialog/BaseFileEntry.cs:
+	gettextify
+
 2004-03-31  Todd Berman  <tberman@sevenl.net>
 
 	* Tree/TreeNode.cs:
-	* Tree/TreeView.cs: Fixing gtk+ 2.4 regression with the change from enum to
-	integer. Using RenderIcon to workaround.
+	* Tree/TreeView.cs: Fixing gtk+ 2.4 regression with the change from
+	enum to integer. Using RenderIcon to workaround.
 
 2004-03-27  Todd Berman  <tberman@sevenl.net>
 
